Changed logo and colors on rules.html

--- a/html/about.html
+++ b/html/about.html
@@ -18,7 +18,7 @@
     <img class="topPictureAbout" src="assets/img/Helkar.png" alt="This image is not available for some reason." title="Helkar, Capital of Ostverland">
     <!-- Container for my header -->
     <div id="headerContainer">
-        <a id="logo" href="index.html"><img src="assets/img/TerpCraft.png" alt="This image is not available for some reason." title="TerpCraft Logo"></a>
+        <a id="logo" href="index.html"><img src="assets/img/UMCPGSandbox.png" alt="This image is not available for some reason." title="TerpCraft Logo"></a>
         <table id="headerTable">
             <tr>
                 <td class="giantText boldText TerpCraft"> TerpCraft</td>
