--- a/html/dynamicMap.html
+++ b/html/dynamicMap.html
@@ -4,42 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Map</title>
+    <title>Server Rules</title>
     <link href="assets/css/default.css" rel="stylesheet">
+    <link href="assets/css/rules.css" rel="stylesheet">
     <link rel="icon" 
-      type="image/png" 
-      href="assets/img/icon.png"
+    type="image/png" 
+    href="assets/img/UMCPG.png"
     >
-    <!-- <link href=".css" rel="stylesheet"> -->
 </head>
 
 <body>
-    <!-- A container for my header with all the code stuffed inside -->
-    <div id="headerContainer">
-        <a id="logo" href="index.html"><img src="assets/img/TerpCraft.png" alt="This image is not available for some reason." title="TerpCraft Logo"></a>
-        <table id="headerTable">
-            <tr>
-                <td class="giantText boldText TerpCraft"> TerpCraft</td>
-            </tr>
-            <tr> 
-            <td class="bigText"> Serving the <span class="DC">D</span><span class="Maryland">M</span><span class="Virginia">V</span> since 2015</td>
-            </tr>
-        </table>
-        <div class="navButtons">
-            <a class="omegaText" href="dynamicMap.html"> Dynamic Map </a>
-        </div>
-        <div class="navButtons">
-            <a class="omegaText" href="rules.html"> Rules </a>
-        </div>
-        <div class="navButtons">
-            <a class="omegaText" href="info.html"> Info </a>
-        </div>
-        <div id="endButton">
-            <a class="omegaText" href="about.html"> About Us </a>
-        </div>
+    <!-- Container for my header -->
+    <main>
+        <div>
+            <div id="headerContainer">
+                <a id="logo" href="index.html"><img src="assets/img/UMCPGShield.png" alt="This image is not available for some reason." title="UMCP Sandbox Gaming Logo"></a>
+                <table id="headerTable">
+                    <tr>
+                        <td class="giantText boldText UMCPGMC"> UMCP Gaming Minecraft </td>
+                    </tr>
+                    <tr> 
+                        <td class="bigText" id="motto"> Serving the <span class="DC">D</span><span class="Maryland">M</span><span class="Virginia">V</span> since 2018</td>
+                    </tr>
+                </table>
+                <div class="navButtons">
+                    <a class="omegaText" href="dynamicMap.html"> Dynamic Map </a>
+                </div>
+                <div class="navButtons">
+                    <a class="omegaText" href="rules.html"> Rules </a>
+                </div>
+                <div class="navButtons">
+                    <a class="omegaText" href="info.html"> Info </a>
+                </div>
+                <div id="endButton">
+                    <a class="omegaText" href="about.html"> About Us </a>
+                </div>
+            </div>
     </div>
         <div id="contentBackground">  <!-- The background surrounding my content --> 
-            <iframe id="dynamicMap" src="https://dynamicmap.terpcraft.net" height="90%"></iframe>
+            <iframe id="dynamicMap" src="http://map.umcpgaming.org" height="90%"></iframe>
         </div>
 </body>
 </html>
