--- a/html/rules.html
+++ b/html/rules.html
@@ -9,7 +9,7 @@
     <link href="assets/css/rules.css" rel="stylesheet">
     <link rel="icon" 
     type="image/png" 
-    href="assets/img/icon.png"
+    href="assets/img/UMCPG.png"
     >
 </head>
 
@@ -47,7 +47,7 @@
                     <h2> Disclosure </h2>
                 </div>                    
                 <p class="bigText">
-                    This document holds ultimate power over TerpCraft. 
+                    This document holds ultimate power over UMCP Gaming Minecraft. 
                     Even server staff must abide by its rules. 
                     However, we do reserve full rights to change any part of this document. 
                     If changes are made, we will inform the playerbase accordingly.
@@ -57,12 +57,12 @@
                     This ranges from simple mitigation of the damage done by the player (accompanied by a verbal warning), to tempbans and permabans.
                 </p>
                 <p class="bigText newLine">
-                    We thank the playerbase for their continued support in refining and expanding these rules to better create a sense of community on TerpCraft.
+                    We thank the playerbase for their continued support in refining and expanding these rules to better create a sense of community on our server.
                 </p>
                 <p class="giantText newLine">
                     Have fun!
                 </p>
-                <p class="omegaText"> - TerpCraft Staff</p>
+                <p class="omegaText"> - UMCPG Minecraft Staff</p>
 
                 <div class="stickyHeading sectionHeading">
                     <h1>Server Rules</h1>
@@ -80,7 +80,7 @@
                                 <td><a href="#gameplayRules">Jump to Location</a></td>
                             </tr>
                             <tr>
-                                <td>Part 3: United Nations Rules</td>
+                                <td>Part 3: International Assembly Rules</td>
                                 <td><a href="#unRules">Jump to Location</a></td>
                             </tr>
                             <tr>
@@ -119,7 +119,7 @@
                         </details>
                     </li>
 
-                    <li>The land that members wish to claim for their nations must be claimed using MapFrontiers, TerpCraft's land claiming mod. The rules about these claims are as follows:</li>
+                    <li>The land that members wish to claim for their nations must be claimed using MapFrontiers, UMCP Gaming Minecraft's land claiming mod. The rules about these claims are as follows:</li>
                         <ol class="doubleIndentedList" type="a"> <!-- Nested list that the HTML validatory REALLY doesn't like for some reason...please don't penalize me for that...please... -->
                             <li>Land claims cannot be simple squares or shapes. They must follow each nation's coastline as smoothly as possible. </li>
                             <li>Nations cannot be formed solely in the Nether or End. Nations may have bases or outposts there, but nations must claim in the Overworld.</li>
@@ -212,7 +212,7 @@
                           <td>❌</td>
                         </tr>
                         <tr>
-                          <td>Stealing tools (any type)</td>
+                          <td>Stealing tools (any type) from armor stands and storage systems</td>
                           <td>❌</td>
                           <td>❌</td>
                         </tr>
@@ -320,10 +320,9 @@
                     <li> You may use <code class="UMCPGMC">/name nickname </code> to give yourself a nickname, but this username must contain some part of your actual username (not just mean letters, but whole words or phrases). 
                         For example, if my username is "Testudo," I could shorten it to Testy, but not something like "ILOVETMNT." </li>
                     <ul class="info">
-                        <li> TerpCraft is not directly associated with UMCP Gaming as this is an independent organization. 
-                            We serve the wider DMV (D.C., Maryland and Virginia) area, and have members from both UMD and Montgomery College. 
-                            We do however work alongside UMCP Gaming to ensure no one from UMD is excluded in any way and that the server is open to all students at UMD regardless of age, race, sexual orientation, etc. 
-                            Discrimination against members on the basis of the protected categories specified by UMD's <a href="https://policies.umd.edu/general-administration/university-of-maryland-non-discrimination-policy-and-procedures">Non-Discrimination Policy</a> <u>will</u> result in disciplinary action being taken by moderators, in line with TerpCraft's Staff Code of Conduct as laid out below. </li>
+                        <li> UMCP Gaming Minecraft is a division of the UMCP Gaming organization. Despite that, we serve the wider DMV (D.C., Maryland and Virginia) area, and have members from both UMD and Montgomery College. 
+                            We work alongside UMCP Gaming to ensure no one from UMD is excluded in any way and that the server is open to all students at UMD regardless of age, race, sexual orientation, etc. 
+                            Discrimination against members on the basis of the protected categories specified by UMD's <a href="https://policies.umd.edu/general-administration/university-of-maryland-non-discrimination-policy-and-procedures">Non-Discrimination Policy</a> <u>will</u> result in disciplinary action being taken by moderators, in line with UMCP Gaming Minecraft's Staff Code of Conduct as laid out below. </li>
                     </ul>
                 </ol>
 
@@ -332,7 +331,7 @@
                 </div>
 
                 <div class="TLDR">
-                    TL;DR: Staff must follow all rules listed above, including the Code of Conduct. Server members have a right to due process after three days. Server staff may not use their operator ("OP") status for their own gain, or to cheat in items.
+                    TL;DR: Staff must follow all rules listed above, including the Code of Conduct. Server members have a right to due process after a three-day probationary period. Server staff may not use their operator ("OP") status for their own gain, or to cheat in items.
                 </div>
 
                 <p class="bigText newLine">
